2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* mobile/include/ui.class.php: Improved the function
	"getContentEndGrid" with the posibility of select the
	theme and changed its return type. Added the function
	"addContentEndGrid". Improved the function"getEndCollapsible"
	with theme and collapsible state selection.
	
	* mobile/include/style/main.css: Added some styles.
	
	* mobile/operation/incident.php: Huge improvement in the
	in cident detail section.
	
2013-09-11  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_incidents.php: Fixed the url to access
	to the incident by email in the function "mail_incident".
	
	* mobile/include/ui.class.php: Changed some init values.
	
	* mobile/include/javascript/functions_incidents.mobile.js:
	Fixed an error on combo inputs in thje function
	"showIncidentTypeFields".
	
	* mobile/operation/incident.php: Fixed an error on incident
	types insertion.
	
2013-09-11  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_graph.php: Now the colors of the graph
	that returns the function "graph_incident_sla_compliance"
	are correct.
	
2013-09-11  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extras/migrate.sql: Modified the column 'bill_id'.
	
	* include/ajax/remote_validations.php: The bill id
	validation now does not require that the new ids be
	larger than the old.
	
	* operation/companies/company_detail.php: Added a
	line jump before the 'under tabs' info.
	
	* operation/invoices/invoices.php: Bug fixes. Now
	the bill id should not be numeric and larger than
	the old ids.
	
2013-09-11  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* mobile/include/ui.class.php: Improved the function
	"contentEndCollapsible" with theme selection. Added
	the function "getEndCollapsible".
	
	* mobile/include/style/main.css: Added a new rule for
	the collapsibles in a forms.
	
	* mobile/operation/workorders.php: Visual changes.
	