@@ -14,6 +14,23 @@ body {
 	vertical-align: center;
 }
 
+/* headers */
+.title {
+	font: bold 1.4em Verdana, Arial, 'Trebuchet MS', Tahoma, Sans-serif;
+	text-transform: uppercase;
+	color: #555;
+	text-align: center;
+	padding: 0px 0px 0px 0px;
+	margin: 0px 0px 15px 0px;
+}
+
+h1 { font-size: 1.2em; }
+h2 { font-size: 1.05em; }
+h3 { font-size: 0.95em; }
+h4 { font-size: 0.8em; }
+h5 { font-size: 0.7em; }
+h6 { font-size: 0.5em; }
+
 .small {
 	font-size: 10px !important;
 }
