@@ -1,5 +1,10 @@
 2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
+	* mobile/operation/incident.php: Added the incident title
+	to the incident detail section.
+	
+2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
 	* mobile/include/ui.class.php: Improved the function
 	"getContentEndGrid" with the posibility of select the
 	theme and changed its return type. Added the function
